# deepin-deb-installer

./: .clog.toml  .gitignore  .project.json  AddPackageThread.cpp  AddPackageThread.h  AppendLoadingWidget.cpp  AppendLoadingWidget.h  CHANGELOG.md  CMakeLists.txt  LoadDebFileListThread.cpp  LoadDebFileListThread.h  Makefile  README.md  README.zh_CN.md  choosefilebutton.cpp  choosefilebutton.h  deb-installer.pro  debinfolabel.cpp  debinfolabel.h  debinstaller.cpp  debinstaller.h  debinstallworker.cpp  debinstallworker.h  deblistmodel.cpp  deblistmodel.h  debpackage.cpp  debpackage.h  deepin-deb-installer.desktop  deepin-deb-installer.pro  deepin-deb-installer_zh_CN.ts  deepin_deb_installer.pro  droundbgframe.cpp  droundbgframe.h  environments.h  filechoosewidget.cpp  filechoosewidget.h  infocontrolbutton.cpp  infocontrolbutton.h  installprocessinfoview.cpp  installprocessinfoview.h  (+31 more)
.reuse/: dep5
src/AptInstallDepend/: AptInstallDepend.pro  CMakeLists.txt  Makefile  aptInstallDepend  installDebThread.cpp  installDebThread.h  main.cpp
src/deb-installer/: CMakeLists.txt  main.cpp  singleInstallerApplication.cpp  singleInstallerApplication.h
src/deb-installer/compatible/: compatible_backend.cpp  compatible_backend.h  compatible_defines.h  compatible_json_parser.cpp  compatible_json_parser.h  compatible_process_controller.cpp  compatible_process_controller.h
src/deb-installer/dbus/: com.deepin.DebInstaller.service
src/deb-installer/immutable/: immutable_backend.cpp  immutable_backend.h  immutable_process_controller.cpp  immutable_process_controller.h
src/deb-installer/manager/: AddPackageThread.cpp  AddPackageThread.h  DealDependThread.cpp  DealDependThread.h  PackageDependsStatus.cpp  PackageDependsStatus.h  packagesmanager.cpp  packagesmanager.h
src/deb-installer/model/: abstract_package_list_model.cpp  abstract_package_list_model.h  deblistmodel.cpp  deblistmodel.h  dependgraph.cpp  dependgraph.h  packageanalyzer.cpp  packageanalyzer.h  packagelistview.cpp  packagelistview.h  packageselectmodel.cpp  packageselectmodel.h  packageslistdelegate.cpp  packageslistdelegate.h  proxy_package_list_model.cpp  proxy_package_list_model.h
src/deb-installer/process/: Pty.cpp  Pty.h  kprocess.cpp  kprocess.h  kpty.cpp  kptydevice.cpp  kptyprocess.cpp  kptyprocess.h
src/deb-installer/uab/: uab_backend.cpp  uab_backend.h  uab_dbus_package_manager.cpp  uab_dbus_package_manager.h  uab_defines.h  uab_package.cpp  uab_package.h  uab_package_list_model.cpp  uab_package_list_model.h  uab_process_controller.cpp  uab_process_controller.h
src/deb-installer/utils/: DebugTimeManager.h  accessible.h  accessibledefine.h  ddlog.h  deb_package.cpp  deb_package.h  eventlogutils.cpp  eventlogutils.h  hierarchicalverify.cpp  hierarchicalverify.h  package_defines.h  qtcompat.h  result.h  utils.cpp  utils.h
src/deepin-deb-installer-dev/: CMakeLists.txt  DeepinDebInstallerLib.cpp  DeepinDebInstallerLib.h  deepin-deb-installer-lib_global.h  result.h
src/deepin-deb-installer-dev/installer/: PackageInstaller.cpp  PackageInstaller.h
src/deepin-deb-installer-lib/: CMakeLists.txt  DeepinDebInstallerLib.cpp  DeepinDebInstallerLib.h  deepin-deb-installer-lib_global.h
src/dfmplugin-debinstaller/: CMakeLists.txt  debinstallerplugin.cpp  debinstallerplugin.h  debinstallerplugin.json
test/: CMakeLists.txt  test-prj-running.sh
test/src/: stub.h  test_main.cpp  ut_singleInstallerApplication_test.cpp
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/FuzzyTest/: CMakeLists.txt
tests/src/: addr_pri.h  test_main.cpp  ut_Head.h  ut_singleInstallerApplication.cpp  ut_singleInstallerApplication_test.cpp
translations/: CMakeLists.txt  deepin-deb-installer.qm  deepin-deb-installer.ts  deepin-deb-installer_am_ET.qm  deepin-deb-installer_am_ET.ts  deepin-deb-installer_ar.qm  deepin-deb-installer_ar.ts  deepin-deb-installer_ast.qm  deepin-deb-installer_ast.ts  deepin-deb-installer_az.ts  deepin-deb-installer_bg.qm  deepin-deb-installer_bg.ts  deepin-deb-installer_bn.ts  deepin-deb-installer_bo.qm  deepin-deb-installer_bo.ts  deepin-deb-installer_br.qm  deepin-deb-installer_br.ts  deepin-deb-installer_ca.qm  deepin-deb-installer_ca.ts  deepin-deb-installer_cs.qm  deepin-deb-installer_cs.ts  deepin-deb-installer_da.qm  deepin-deb-installer_da.ts  deepin-deb-installer_de.qm  deepin-deb-installer_de.ts  deepin-deb-installer_en_AU.qm  deepin-deb-installer_en_AU.ts  deepin-deb-installer_en_US.ts  deepin-deb-installer_es.qm  deepin-deb-installer_es.ts  deepin-deb-installer_es_419.qm  deepin-deb-installer_es_419.ts  deepin-deb-installer_et.qm  deepin-deb-installer_et.ts  deepin-deb-installer_fi.qm  deepin-deb-installer_fi.ts  deepin-deb-installer_fr.qm  deepin-deb-installer_fr.ts  deepin-deb-installer_gl_ES.qm  deepin-deb-installer_gl_ES.ts  (+127 more)
translations/desktop/: CMakeLists.txt  deepin-deb-installer.desktop  desktop.ts  desktop_ar.ts  desktop_ast.ts  desktop_az.ts  desktop_bg.ts  desktop_bn.ts  desktop_bo.ts  desktop_br.ts  desktop_ca.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_en_AU.ts  desktop_es.ts  desktop_es_419.ts  desktop_et.ts  desktop_fi.ts  desktop_fil.ts  desktop_fr.ts  desktop_gl_ES.ts  desktop_he.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hu.ts  desktop_id.ts  desktop_it.ts  desktop_ja.ts  desktop_ko.ts  desktop_lo.ts  desktop_lt.ts  desktop_mn.ts  desktop_ms.ts  desktop_ne.ts  desktop_nl.ts  desktop_pa.ts  desktop_pl.ts  desktop_pt.ts  desktop_pt_BR.ts  (+12 more)
translations/policy/: CMakeLists.txt  com.deepin.pkexec.aptInstallDepend.policy  policy.ts  policy_ar.ts  policy_az.ts  policy_bn.ts  policy_bo.ts  policy_ca.ts  policy_cs.ts  policy_de.ts  policy_es.ts  policy_et.ts  policy_fi.ts  policy_fil.ts  policy_fr.ts  policy_gl_ES.ts  policy_he.ts  policy_hi_IN.ts  policy_hr.ts  policy_hu.ts  policy_id.ts  policy_it.ts  policy_ja.ts  policy_lo.ts  policy_lt.ts  policy_ms.ts  policy_nl.ts  policy_pl.ts  policy_pt.ts  policy_pt_BR.ts  policy_ru.ts  policy_sl.ts  policy_sq.ts  policy_sr.ts  policy_tr.ts  policy_ug.ts  policy_uk.ts  policy_vi.ts  policy_zh_CN.ts  policy_zh_HK.ts  (+1 more)
(+420 files in other folders)
